# pyubxutils

./: .gitignore  CITATION.bib  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: checkpr.yml  deploy.yml  main.yml
docs/: conf.py  index.rst  modules.rst  pyubxutils.rst
examples/: ubxsimulator.json
src/pyubxutils/: __init__.py  _version.py  globals.py  helpers.py  ubxbase.py  ubxcompare.py  ubxload.py  ubxsave.py  ubxsetrate.py  ubxsimulator.py  ubxsimulator_cli.py
tests/: test_static.py  test_stream.py
